       (*.lnk) file itself and once for the target the shortcut points to.
       See issue #146. (Stefan)
- NEW: Option to switch to the newly created branch/tag in the branch/tag
       dialog. See issue #150. (Stefan)
- NEW: Diffing of properties. See issue #133. (Stefan)
- NEW: 'Open' and 'Open with...' commands in the progress dialog. (Stefan)
- CHG: Setup UI changed from the dark'd code from the VS-generated package
       to a standardised framework from the WiX tutorial. 
       See issue #147. (Pete)
- CHG: Refactored WiX setup code into fragments and started to use include
       files for variables that are needed more than once. 
       See issues #127 and #128. (Pete)
- CHG: The spellchecker now checks text pasted in the edit control
       immediately, without the need to enter text manually first.
       See issue #116. (Stefan)
- CHG: In the log dialog, the "next 100" button is disabled once the
       "Show All" button was pressed. See issue #138. (Stefan)
- CHG: Enabled diffing of copied/moved files in the commit dialog. (Stefan)
- BUG: The default ssh client (TortoisePlink) wasn't used in some
       places, e.g. the revision graph. (Stefan)
- BUG: The option "Only use spellchecker when tsvn:projectlanguage is set"
       was inversed. (Stefan)
- BUG: The bugtraq: and tsvn: property values weren't correctly handled if
       they contained non-ASCII chars. (Stefan)
- BUG: Comparing two files from the revision graph didn't work. (Stefan)
- BUG: When adding a folder, nested folders were shown as unversioned
       and checked to add. (Stefan)
- BUG: The same line was shown twice in TortoiseMerge if 'ignore leading
       whitespace' option was turned on and the line differed only
       in whitespaces. See issue #121. (Stefan)
- BUG: UNICODE chars weren't shown correctly in the log message
       middle view. (Stefan)
- BUG: The spell checker codepage was ignored but the local codepage